// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at custom-engines\\\\Windows_NT\\\\query-engine-windows.exe, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "README.md",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_BINARY, uses supplied binary: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "README.md",
  "scripts",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var) 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Binary PRISMA_QUERY_ENGINE_LIBRARY (!), uses default binary (and ignores env var): ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "README.md",
  "scripts",
]
`;

exports[`Binary no options, uses default binary 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules\\\\@prisma\\\\engines\\\\query-engine-windows.exe)
Migration Engine      : placeholder (at node_modules\\\\@prisma\\\\engines\\\\migration-engine-windows.exe)
Introspection Engine  : placeholder (at node_modules\\\\@prisma\\\\engines\\\\introspection-engine-windows.exe)
Format Binary         : placeholder (at node_modules\\\\@prisma\\\\engines\\\\prisma-fmt-windows.exe)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Binary no options, uses default binary: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-windows.exe",
  "schema.prisma",
]
`;

exports[`Binary no options, uses default binary: ./node_modules/@prisma/engines 1`] = `
Array [
  "dist",
  "download",
  "introspection-engine-windows.exe",
  "migration-engine-windows.exe",
  "node_modules",
  "package.json",
  "prisma-fmt-windows.exe",
  "query-engine-windows.exe",
  "README.md",
]
`;

exports[`Binary no options, uses default binary: ./node_modules/prisma 1`] = `
Array [
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-windows.exe",
  "README.md",
  "scripts",
]
`;
